--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,3 +15,9 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      -
+        name: build and push
+        run: /
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+          docker buildx ls
+          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis .
