--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,4 +20,4 @@ jobs:
         run: /
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
           docker buildx ls
-          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis .
+          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis:latest .
