--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,8 +16,11 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: build and push
-        run: /
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          docker buildx ls
-          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis:latest .
+        name: dockerhub login
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      - 
+        name: docker buildx
+        run: docker buildx ls
+      -
+        name: docker push
+        run: docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis:latest .
