--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,13 +14,16 @@ jobs:
         uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v2     
       -
-        name: dockerhub login
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-      - 
-        name: docker buildx
-        run: docker buildx ls
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       -
-        name: docker push
-        run: docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t taidocker01/flask-redis:latest .
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: taidocker01/flask-redis:latest        
